Models criados, sistema de login e cadastro pronto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-org.springframework.orm.jpa.vendor.Database=nomebd
+org.springframework.orm.jpa.vendor.Database=chamadosuporte
 spring.datasource.plataform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/nomebd
+spring.datasource.url=jdbc:postgresql://localhost:5432/chamadosuporte
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.show-sql=true
