Pastas model, repository e controller movidas para local certo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ org.springframework.orm.jpa.vendor.Database=chamadosuporte
 spring.datasource.plataform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/chamadosuporte
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=admin
+# senha 123 no senac
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
